# liveavatar-platform-rtc-python

./: .gitignore  README.md  README.zh.md  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: cd9c80a1-2bf6-47d3-b83e-c0d2c81c3af3.json  e5bb9ddc-45a0-4575-b129-a97e44e50258.json
.omc/state/: agent-replay-0480f60c-3e2d-48cf-b7d2-c5613dfe9254.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
examples/: basic_agent.py
src/liveavatar_rtc/: __init__.py  api_client.py  client.py  event_dispatcher.py  livekit_manager.py  session.py  text_chunker.py  types.py
tests/: test_api_client.py  test_client.py  test_event_dispatcher.py  test_livekit_manager.py  test_session.py  test_text_chunker.py  test_types.py
